# deploy_percept

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/ubuntu-22.04-allwinner/: .dockerignore  Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.lingma/rules/: cpp.md
apps/: CMakeLists.txt
apps/demo/: CMakeLists.txt  main.cpp
apps/smoke_test/: CMakeLists.txt  main_test_stdlib.cpp  main_test_third_party.cpp
apps/yolov5_detect_awnn/: CMakeLists.txt  README.md  bench_output.cpp  bench_output.hpp  main.cpp  yolov5_fp32_post.cpp  yolov5_fp32_post.hpp
apps/yolov5_detect_rknn/: CMakeLists.txt  main.cpp  yolov5_detect_result_model_outputs.npz
apps/yolov5_seg_rknn/: CMakeLists.txt  main.cpp  yolov5_seg_result_model_outputs.npz
apps/yolov8_detect_awnn/: CMakeLists.txt  README.md  README_office.md  main.cpp  yolov8n_6_uint8_a733.nb
apps/yolov8_pose_rknn/: CMakeLists.txt  main.cpp
apps/yolov8_seg_rknn/: CMakeLists.txt  README.md  convert.py  main.cpp  yolov8_seg_result_model_outputs.npz
benchmarks/: CMakeLists.txt
benchmarks/awnn/: CMakeLists.txt  bench_common.cpp  bench_common.hpp  bench_output.cpp  bench_output.hpp  bench_pipeline.cpp  bench_pipeline.hpp  bench_report.cpp  bench_report.hpp  bench_run.cpp  bench_run.hpp  bench_yolov5_detect_awnn_mapped_vs_hostcopy.cpp  bench_yolov5_full_pipeline.cpp  bench_yolov5_post_process.cpp  bench_yolov5_preprocess.cpp
benchmarks/cmake/: BenchmarkHelpers.cmake
cmake/: FindRgaCustom.cmake  FindRknn.cmake  FindThirdParty.cmake  PerceptInstall.cmake  aarch64-A733-toolchain.cmake  aarch64-toolchain.cmake  armv7l-SSC375-toolchain.cmake  x86_64-toolchain.cmake
cmake/modules/: FindAwnn.cmake  FindCnpyCustom.cmake  FindGTestCustom.cmake  FindNlohmannJson.cmake  FindOpenCVCustom.cmake  FindSigmastar.cmake  FindSpdlogCustom.cmake  FindThirdParty.cmake  FindZlibCustom.cmake
cmake/modules/opencv/: OpenCVSigmastar.cmake
cmake/opencv/: OpenCVSigmastarImported.cmake
cmake/toolchains/: aarch64-linux-gnu_orange_pi_4_pro_a733-toolchain.cmake  aarch64-toolchain.cmake  armv7l-SSC375-toolchain.cmake  x86_64-toolchain.cmake
examples/data/yolov5_detect/: yolov5_detect_results.json  yolov5_detect_results.yaml  yolov5_output0.npy  yolov5_output1.npy  yolov5_output2.npy  yolov5_outputs.npz  yolov5_params.json  yolov5_params.yaml
examples/data/yolov5_seg/: detection_results.yaml  yolov5_seg_output.npz
include/deploy_percept/: deploy_percept.hpp  deploy_percept_utils.hpp  types.hpp
include/deploy_percept/calculator/: Calculator.hpp
include/deploy_percept/engine/: AwnnEngine.hpp  AwnnImageInput.hpp  AwnnResultGuard.hpp  AwnnTensorDequant.hpp  BaseEngine.hpp  EngineFactory.hpp  OutputAccess.hpp  RknnEngine.hpp  TensorDesc.hpp  VipLiteRuntime.hpp
include/deploy_percept/post_process/: BasePostProcess.hpp  PostProcessFactory.hpp  YoloBasePostProcess.hpp  YoloV5DetectPostProcess.hpp  YoloV5DetectPostProcessAwnn.hpp  YoloV5SegPostProcess.hpp  YoloV8DetectPostProcessAwnn.hpp  YoloV8PosePostProcess.hpp  YoloV8SegPostProcess.hpp  types.hpp
include/deploy_percept/pre_process/: ImagePreProcess.hpp  image_pre_process.hpp  image_pre_process_rga.hpp
include/deploy_percept/utils/: io.hpp  logger_factory.hpp  npy.hpp  vis_draw.hpp
scripts/: bench.sh  build.sh  build_third.sh  build_third_party.sh  install.sh  test.sh  third_party_builder.sh
scripts/third_party_builders/: builder_cnpy.sh  builder_gtest.sh  builder_opencv.sh  builder_rga.sh  builder_rknpu.sh  builder_spdlog.sh  builder_yaml-cpp.sh  builder_zlib.sh  common.sh  git_clone.sh
src/calculator/: Calculator.cpp
src/engine/: AwnnEngine.cpp  AwnnImageInput.cpp  AwnnTensorDequant.cpp  BaseEngine.cpp  EngineFactory.cpp  OutputAccess.cpp  RknnEngine.cpp  VipLiteRuntime.cpp
src/image/: types.cpp
src/post_process/: PostProcessFactory.cpp  YoloBasePostProcess.cpp  YoloV5DetectPostProcess.cpp  YoloV5DetectPostProcessAwnn.cpp  YoloV5SegPostProcess.cpp  YoloV8DetectPostProcessAwnn.cpp  YoloV8PosePostProcess.cpp  YoloV8SegPostProcess.cpp
src/pre_process/: ImagePreProcess.cpp  image_pre_process.cpp  image_pre_process_rga.cpp
src/utils/: io.cpp  logger_factory.cpp  npy.cpp  vis_draw.cpp
tests/: CMakeLists.txt  calculator_test.cpp  test_YoloV5DetectPostProcess.cpp  test_calculator.cpp
tests/cmake/: TestHelpers.cmake
tests/integration/: CMakeLists.txt
tests/integration/awnn/: CMakeLists.txt  test_yolov5_detect_awnn.cpp  test_yolov8_detect_awnn.cpp
tests/post_process/: test_YoloV5DetectPostProcess.cpp  test_YoloV5SegPostProcess.cpp  test_YoloV8SegPostProcess.cpp
tests/smoke/: CMakeLists.txt  test_spdlog.cpp  test_stdlib.cpp
tests/test_common/: compare.cpp  compare.hpp  paths.cpp  paths.hpp  utils.cpp  utils.hpp
tests/unit/: CMakeLists.txt
tests/unit/post_process/: test_YoloV5DetectPostProcess.cpp  test_YoloV5SegPostProcess.cpp  test_YoloV8SegPostProcess.cpp
tests/utils/: environment.hpp
