if(BUILD_RKNN_APPS)
    add_subdirectory(yolov5_detect_rknn)
    add_subdirectory(yolov5_seg_rknn)
    add_subdirectory(yolov8_seg_rknn)
    add_subdirectory(yolov8_pose_rknn)
else()
    message(STATUS "apps: BUILD_RKNN_APPS=OFF，跳过 RKNN 示例编译")
endif()

if(BUILD_AWNN_APPS)
    # include(FindAwnn)
    if(AWNN_FOUND)
        add_subdirectory(yolov5_detect_awnn)
        add_subdirectory(yolov8_detect_awnn)
    else()
        message(WARNING "apps: BUILD_AWNN_APPS=ON 但未找到 AWNN VIPLite（检查 third_party/.../awnn/viplite-tina）")
    endif()
else()
    message(STATUS "apps: BUILD_AWNN_APPS=OFF，跳过 AWNN 示例编译")
endif()
